--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "kbd"]
-	path = kbd
+	path = pcb/kbd
 	url = https://github.com/foostan/kbd
 [submodule "keyswitches.pretty"]
-	path = keyswitches.pretty
+	path = pcb/keyswitches.pretty
 	url = https://github.com/daprice/keyswitches.pretty
